@@ -20,13 +20,13 @@ if(enable_smpi)
   add_executable(mc_bugged2 mc_bugged2.c)
   add_executable(smpi_replay replay/replay.c)
 
-  target_link_libraries(bcbench simgrid smpi )
-  target_link_libraries(mvmul simgrid smpi )
-  target_link_libraries(smpi_traced simgrid smpi )
-  target_link_libraries(smpi_traced_simple simgrid smpi )
-  target_link_libraries(mc_bugged1 simgrid smpi )
-  target_link_libraries(mc_bugged2 simgrid smpi )
-  target_link_libraries(smpi_replay simgrid smpi )
+  target_link_libraries(bcbench simgrid)
+  target_link_libraries(mvmul simgrid)
+  target_link_libraries(smpi_traced simgrid)
+  target_link_libraries(smpi_traced_simple simgrid)
+  target_link_libraries(mc_bugged1 simgrid)
+  target_link_libraries(mc_bugged2 simgrid)
+  target_link_libraries(smpi_replay simgrid)
 
 endif()
 
