@@ -8,7 +8,7 @@ if(enable_smpi)
   if(NOT WIN32)
     add_executable(MM_mpi MM_mpi.c 2.5D_MM.c Summa.c Matrix_init.c)
     ### Add definitions for compile
-    target_link_libraries(MM_mpi simgrid pthread smpi)
+    target_link_libraries(MM_mpi simgrid pthread)
   endif()
 endif()
 
