@@ -7,10 +7,10 @@ CMAKE_LINKARGS="-L@libdir@"
 
 if [ "@WIN32@" != "1" ]; then
   CFLAGS="-Dmain=smpi_simulated_main__"
-  LINKARGS="-lsimgrid -lsmpi"
+  LINKARGS="-lsimgrid"
 else
   CFLAGS="-include @includedir@/smpi/smpi_main.h"
-  LINKARGS="@libdir@\libsimgrid.dll @libdir@\libsmpi.dll"
+  LINKARGS="@libdir@\libsimgrid.dll"
 fi
 
 CMDLINE=""
