@@ -30,30 +30,30 @@ if(enable_smpi)
   add_executable(indexed_test indexed_test.c)
   add_executable(struct_test struct_test.c)
 
-  target_link_libraries(alltoall2 simgrid smpi )
-  target_link_libraries(alltoall_basic simgrid smpi )
-  target_link_libraries(alltoallv simgrid smpi )
-  target_link_libraries(allreduce simgrid smpi )
-  target_link_libraries(bcast simgrid smpi )
-  target_link_libraries(compute simgrid smpi )
-  target_link_libraries(compute2 simgrid smpi )
-  target_link_libraries(compute3 simgrid smpi )
-  target_link_libraries(pingpong simgrid smpi )
-  target_link_libraries(scatter simgrid smpi )
-  target_link_libraries(reduce simgrid smpi )
-  target_link_libraries(split simgrid smpi )
-  target_link_libraries(smpi_sendrecv simgrid smpi )
-  target_link_libraries(ttest01 simgrid smpi )
-  target_link_libraries(vector_test simgrid smpi )
-  target_link_libraries(hvector_test simgrid smpi )
-  target_link_libraries(indexed_test simgrid smpi )
-  target_link_libraries(struct_test simgrid smpi )
+  target_link_libraries(alltoall2 simgrid)
+  target_link_libraries(alltoall_basic simgrid)
+  target_link_libraries(alltoallv simgrid)
+  target_link_libraries(allreduce simgrid)
+  target_link_libraries(bcast simgrid)
+  target_link_libraries(compute simgrid)
+  target_link_libraries(compute2 simgrid)
+  target_link_libraries(compute3 simgrid)
+  target_link_libraries(pingpong simgrid)
+  target_link_libraries(scatter simgrid)
+  target_link_libraries(reduce simgrid)
+  target_link_libraries(split simgrid)
+  target_link_libraries(smpi_sendrecv simgrid)
+  target_link_libraries(ttest01 simgrid)
+  target_link_libraries(vector_test simgrid)
+  target_link_libraries(hvector_test simgrid)
+  target_link_libraries(indexed_test simgrid)
+  target_link_libraries(struct_test simgrid)
 
   set_target_properties(smpi_sendrecv PROPERTIES RENAME sendrecv)
 
   if(NOT WIN32)
     add_executable(dsend dsend.c)
-    target_link_libraries(dsend m simgrid smpi )
+    target_link_libraries(dsend m simgrid)
   endif()
 
 endif()
