@@ -51,40 +51,40 @@ if(enable_smpi)
     add_executable(bcastlog bcastlog.f)
   endif()
 
-  target_link_libraries(coll1  simgrid smpi )
-  target_link_libraries(coll2 simgrid smpi )
-  target_link_libraries(coll3 simgrid smpi )
-  target_link_libraries(coll4 simgrid smpi )
-  target_link_libraries(coll5 simgrid smpi )
-  target_link_libraries(coll6 simgrid smpi )
-  target_link_libraries(coll7 simgrid smpi )
-  target_link_libraries(coll8 simgrid smpi )
-  target_link_libraries(coll9 simgrid smpi )
-  target_link_libraries(coll10 simgrid smpi )
-  target_link_libraries(coll11 simgrid smpi )
-  target_link_libraries(coll12  simgrid smpi )
-  target_link_libraries(coll13 simgrid smpi )
-  target_link_libraries(allredmany simgrid smpi )
-  target_link_libraries(bcastbug simgrid smpi )
-  target_link_libraries(bcastbug2 simgrid smpi )
-  target_link_libraries(bcastvec simgrid smpi )
-  target_link_libraries(grouptest simgrid smpi )
-  target_link_libraries(redtst simgrid smpi )
-  target_link_libraries(barrier simgrid smpi )
-  target_link_libraries(bcast_mpich simgrid smpi )
-  target_link_libraries(allred simgrid smpi )
-  target_link_libraries(allred2 simgrid smpi )
-  target_link_libraries(scatterv simgrid smpi )
-  target_link_libraries(scattern simgrid smpi )
-  target_link_libraries(redscat simgrid smpi )
-  target_link_libraries(longuser simgrid smpi )
-  target_link_libraries(alltoallv_mpich simgrid smpi )
-  target_link_libraries(scantst simgrid smpi )
+  target_link_libraries(coll1  simgrid)
+  target_link_libraries(coll2 simgrid)
+  target_link_libraries(coll3 simgrid)
+  target_link_libraries(coll4 simgrid)
+  target_link_libraries(coll5 simgrid)
+  target_link_libraries(coll6 simgrid)
+  target_link_libraries(coll7 simgrid)
+  target_link_libraries(coll8 simgrid)
+  target_link_libraries(coll9 simgrid)
+  target_link_libraries(coll10 simgrid)
+  target_link_libraries(coll11 simgrid)
+  target_link_libraries(coll12  simgrid)
+  target_link_libraries(coll13 simgrid)
+  target_link_libraries(allredmany simgrid)
+  target_link_libraries(bcastbug simgrid)
+  target_link_libraries(bcastbug2 simgrid)
+  target_link_libraries(bcastvec simgrid)
+  target_link_libraries(grouptest simgrid)
+  target_link_libraries(redtst simgrid)
+  target_link_libraries(barrier simgrid)
+  target_link_libraries(bcast_mpich simgrid)
+  target_link_libraries(allred simgrid)
+  target_link_libraries(allred2 simgrid)
+  target_link_libraries(scatterv simgrid)
+  target_link_libraries(scattern simgrid)
+  target_link_libraries(redscat simgrid)
+  target_link_libraries(longuser simgrid)
+  target_link_libraries(alltoallv_mpich simgrid)
+  target_link_libraries(scantst simgrid)
   if(SMPI_F2C)
-    target_link_libraries(allredf simgrid smpi )
-    target_link_libraries(assocf simgrid smpi )
-    target_link_libraries(allgatherf simgrid smpi )
-    target_link_libraries(bcastlog simgrid smpi )
+    target_link_libraries(allredf simgrid)
+    target_link_libraries(assocf simgrid)
+    target_link_libraries(allgatherf simgrid)
+    target_link_libraries(bcastlog simgrid)
   endif()
 
   set_target_properties(coll1 PROPERTIES COMPILE_FLAGS "${MPICH_FLAGS}")
