@@ -30,19 +30,19 @@ if(enable_smpi)
   #add_executable(commnames_f commnamesf.f)
   endif()
 
-  target_link_libraries(attrerr simgrid smpi )
- # target_link_libraries(attrt simgrid smpi )
- # target_link_libraries(commnames simgrid smpi )
-  target_link_libraries(groupcreate simgrid smpi )
-  target_link_libraries(grouptest_mpich simgrid smpi )
-  target_link_libraries(icdup simgrid smpi )
-  target_link_libraries(ictest simgrid smpi )
-  target_link_libraries(ictest2 simgrid smpi )
-  target_link_libraries(ictest3 simgrid smpi )
+  target_link_libraries(attrerr simgrid)
+ # target_link_libraries(attrt simgrid)
+ # target_link_libraries(commnames simgrid)
+  target_link_libraries(groupcreate simgrid)
+  target_link_libraries(grouptest_mpich simgrid)
+  target_link_libraries(icdup simgrid)
+  target_link_libraries(ictest simgrid)
+  target_link_libraries(ictest2 simgrid)
+  target_link_libraries(ictest3 simgrid)
 
   if(SMPI_F2C)
-  #target_link_libraries(attrtest_f simgrid smpi f2c)
-  #target_link_libraries(commnames_f simgrid smpi f2c)
+  #target_link_libraries(attrtest_f simgrid f2c)
+  #target_link_libraries(commnames_f simgrid f2c)
   endif()
   
   set_target_properties(attrerr PROPERTIES COMPILE_FLAGS "${MPICH_FLAGS}")
