@@ -31,23 +31,23 @@ if(enable_smpi)
 #    add_executable(errstringsf errstringsf.f)
     add_executable(getprocf getprocf.f)
   endif()
-  target_link_libraries(init simgrid smpi )
-  target_link_libraries(timers simgrid smpi )
-  target_link_libraries(timertest simgrid smpi )
-  target_link_libraries(baseattr simgrid smpi )
-  target_link_libraries(gtime simgrid smpi )
-  target_link_libraries(errhand simgrid smpi )
+  target_link_libraries(init simgrid)
+  target_link_libraries(timers simgrid)
+  target_link_libraries(timertest simgrid)
+  target_link_libraries(baseattr simgrid)
+  target_link_libraries(gtime simgrid)
+  target_link_libraries(errhand simgrid)
   if(NOT WIN32)
-    target_link_libraries(sigchk simgrid smpi )
+    target_link_libraries(sigchk simgrid)
   endif()
-	target_link_libraries(aborttest simgrid smpi )
-  target_link_libraries(testerr simgrid smpi )
-  target_link_libraries(getproc simgrid smpi )
+	target_link_libraries(aborttest simgrid)
+  target_link_libraries(testerr simgrid)
+  target_link_libraries(getproc simgrid)
   if(SMPI_F2C)
-#    target_link_libraries(baseattrf simgrid smpi )
-#    target_link_libraries(errhandf simgrid smpi )
-#    target_link_libraries(errstringsf simgrid smpi )
-    target_link_libraries(getprocf simgrid smpi )
+#    target_link_libraries(baseattrf simgrid)
+#    target_link_libraries(errhandf simgrid)
+#    target_link_libraries(errstringsf simgrid)
+    target_link_libraries(getprocf simgrid)
   endif()
 
   set_target_properties(timers PROPERTIES COMPILE_FLAGS "${MPICH_FLAGS}")
