@@ -105,97 +105,97 @@ if(enable_smpi)
     add_executable(typebasef typebasef.f)
   endif()
 
-  target_link_libraries(overtake simgrid smpi )
-  target_link_libraries(bsendtest simgrid smpi )
-  target_link_libraries(relrank simgrid smpi )
-  target_link_libraries(sendrecv_mpich simgrid smpi )
-  target_link_libraries(persistent simgrid smpi )
-  target_link_libraries(flood simgrid smpi )
-  target_link_libraries(flood2 simgrid smpi )
-  target_link_libraries(persist simgrid smpi )
-  target_link_libraries(persist2 simgrid smpi )
-  target_link_libraries(sendrecv2 simgrid smpi )
-  target_link_libraries(sendrecv3 simgrid smpi )
-  target_link_libraries(sendrecv4 simgrid smpi )
-  target_link_libraries(irsend simgrid smpi )
-  target_link_libraries(irsendinit simgrid smpi )
-  target_link_libraries(longmsgs simgrid smpi )
-  target_link_libraries(testsome simgrid smpi )
-  target_link_libraries(testall_mpich simgrid smpi )
-  target_link_libraries(sndrcv simgrid smpi )
-  target_link_libraries(sndrcvrep simgrid smpi )
-  target_link_libraries(sndrcvrpl2 simgrid smpi )
-  target_link_libraries(getelm simgrid smpi )
-  target_link_libraries(self simgrid smpi )
-  target_link_libraries(typelb simgrid smpi )
-  target_link_libraries(structlb simgrid smpi )
-  target_link_libraries(typeub simgrid smpi )
-  target_link_libraries(typeub2 simgrid smpi )
-  target_link_libraries(typeub3 simgrid smpi )
-  target_link_libraries(typecreate simgrid smpi )
-  target_link_libraries(reqcreate simgrid smpi )
-  target_link_libraries(reqfree simgrid smpi )
-  target_link_libraries(isndrcv simgrid smpi )
-  target_link_libraries(nullproc simgrid smpi )
-  target_link_libraries(nullproc2 simgrid smpi )
-  target_link_libraries(trunc simgrid smpi )
-  target_link_libraries(truncmult simgrid smpi )
-  target_link_libraries(typetest simgrid smpi )
-  target_link_libraries(typebase simgrid smpi )
-  target_link_libraries(ssendtest simgrid smpi )
-  target_link_libraries(ssendtest2 simgrid smpi )
-  target_link_libraries(issendtest simgrid smpi )
-  target_link_libraries(issend2 simgrid smpi )
-  target_link_libraries(issendinit simgrid smpi )
-  target_link_libraries(testtypes simgrid smpi )
-  target_link_libraries(dataalign simgrid smpi )
-  target_link_libraries(dtyperecv simgrid smpi )
-  target_link_libraries(dtypelife simgrid smpi )
-  target_link_libraries(htmsg simgrid smpi )
-  target_link_libraries(isendtest simgrid smpi )
-  target_link_libraries(third simgrid smpi )
-  target_link_libraries(fourth simgrid smpi )
-  target_link_libraries(fifth simgrid smpi )
-  target_link_libraries(sixth simgrid smpi )
-  target_link_libraries(probe simgrid smpi )
-  target_link_libraries(nblock simgrid smpi )
-  target_link_libraries(sendmany simgrid smpi )
-  target_link_libraries(order simgrid smpi )
-  target_link_libraries(pack simgrid smpi )
-  target_link_libraries(probe1 simgrid smpi )
-  target_link_libraries(testtest1  simgrid smpi )
-  target_link_libraries(hvectest simgrid smpi )
-  target_link_libraries(hvectest2 simgrid smpi )
-  target_link_libraries(hvec simgrid smpi )
-  target_link_libraries(hindexed simgrid smpi )
-  target_link_libraries(irecvtest simgrid smpi )
-  target_link_libraries(nbtest simgrid smpi )
-  target_link_libraries(waitany simgrid smpi )
-  target_link_libraries(waitall simgrid smpi )
-  target_link_libraries(waitall2 simgrid smpi )
-  target_link_libraries(waitall3 simgrid smpi )
-  target_link_libraries(waitall4 simgrid smpi )
-  target_link_libraries(commit simgrid smpi )
-  target_link_libraries(cancel simgrid smpi )
-  target_link_libraries(cancel2 simgrid smpi )
-  target_link_libraries(cancel3 simgrid smpi )
-  target_link_libraries(cancelmessages simgrid smpi )
-  target_link_libraries(cancelibm simgrid smpi )
-  target_link_libraries(cancelissend simgrid smpi )
-  target_link_libraries(sendorder simgrid smpi )
-  target_link_libraries(exittest simgrid smpi )
-  target_link_libraries(selfvsworld simgrid smpi )
+  target_link_libraries(overtake simgrid)
+  target_link_libraries(bsendtest simgrid)
+  target_link_libraries(relrank simgrid)
+  target_link_libraries(sendrecv_mpich simgrid)
+  target_link_libraries(persistent simgrid)
+  target_link_libraries(flood simgrid)
+  target_link_libraries(flood2 simgrid)
+  target_link_libraries(persist simgrid)
+  target_link_libraries(persist2 simgrid)
+  target_link_libraries(sendrecv2 simgrid)
+  target_link_libraries(sendrecv3 simgrid)
+  target_link_libraries(sendrecv4 simgrid)
+  target_link_libraries(irsend simgrid)
+  target_link_libraries(irsendinit simgrid)
+  target_link_libraries(longmsgs simgrid)
+  target_link_libraries(testsome simgrid)
+  target_link_libraries(testall_mpich simgrid)
+  target_link_libraries(sndrcv simgrid)
+  target_link_libraries(sndrcvrep simgrid)
+  target_link_libraries(sndrcvrpl2 simgrid)
+  target_link_libraries(getelm simgrid)
+  target_link_libraries(self simgrid)
+  target_link_libraries(typelb simgrid)
+  target_link_libraries(structlb simgrid)
+  target_link_libraries(typeub simgrid)
+  target_link_libraries(typeub2 simgrid)
+  target_link_libraries(typeub3 simgrid)
+  target_link_libraries(typecreate simgrid)
+  target_link_libraries(reqcreate simgrid)
+  target_link_libraries(reqfree simgrid)
+  target_link_libraries(isndrcv simgrid)
+  target_link_libraries(nullproc simgrid)
+  target_link_libraries(nullproc2 simgrid)
+  target_link_libraries(trunc simgrid)
+  target_link_libraries(truncmult simgrid)
+  target_link_libraries(typetest simgrid)
+  target_link_libraries(typebase simgrid)
+  target_link_libraries(ssendtest simgrid)
+  target_link_libraries(ssendtest2 simgrid)
+  target_link_libraries(issendtest simgrid)
+  target_link_libraries(issend2 simgrid)
+  target_link_libraries(issendinit simgrid)
+  target_link_libraries(testtypes simgrid)
+  target_link_libraries(dataalign simgrid)
+  target_link_libraries(dtyperecv simgrid)
+  target_link_libraries(dtypelife simgrid)
+  target_link_libraries(htmsg simgrid)
+  target_link_libraries(isendtest simgrid)
+  target_link_libraries(third simgrid)
+  target_link_libraries(fourth simgrid)
+  target_link_libraries(fifth simgrid)
+  target_link_libraries(sixth simgrid)
+  target_link_libraries(probe simgrid)
+  target_link_libraries(nblock simgrid)
+  target_link_libraries(sendmany simgrid)
+  target_link_libraries(order simgrid)
+  target_link_libraries(pack simgrid)
+  target_link_libraries(probe1 simgrid)
+  target_link_libraries(testtest1  simgrid)
+  target_link_libraries(hvectest simgrid)
+  target_link_libraries(hvectest2 simgrid)
+  target_link_libraries(hvec simgrid)
+  target_link_libraries(hindexed simgrid)
+  target_link_libraries(irecvtest simgrid)
+  target_link_libraries(nbtest simgrid)
+  target_link_libraries(waitany simgrid)
+  target_link_libraries(waitall simgrid)
+  target_link_libraries(waitall2 simgrid)
+  target_link_libraries(waitall3 simgrid)
+  target_link_libraries(waitall4 simgrid)
+  target_link_libraries(commit simgrid)
+  target_link_libraries(cancel simgrid)
+  target_link_libraries(cancel2 simgrid)
+  target_link_libraries(cancel3 simgrid)
+  target_link_libraries(cancelmessages simgrid)
+  target_link_libraries(cancelibm simgrid)
+  target_link_libraries(cancelissend simgrid)
+  target_link_libraries(sendorder simgrid)
+  target_link_libraries(exittest simgrid)
+  target_link_libraries(selfvsworld simgrid)
   if(SMPI_F2C)
-    target_link_libraries(secondf simgrid smpi f2c)
-#    target_link_libraries(allpair2 simgrid smpi f2c)
-#    target_link_libraries(allpair simgrid smpi f2c)
-    target_link_libraries(isendf simgrid smpi f2c)
-    target_link_libraries(pingpong_f simgrid smpi f2c)
-    target_link_libraries(send1 simgrid smpi f2c)
-    target_link_libraries(sendcplx simgrid smpi f2c)
-    target_link_libraries(sendfort simgrid smpi f2c)
-#    target_link_libraries(structf simgrid smpi f2c)
-    target_link_libraries(typebasef simgrid smpi f2c)
+    target_link_libraries(secondf simgrid f2c)
+#    target_link_libraries(allpair2 simgrid f2c)
+#    target_link_libraries(allpair simgrid f2c)
+    target_link_libraries(isendf simgrid f2c)
+    target_link_libraries(pingpong_f simgrid f2c)
+    target_link_libraries(send1 simgrid f2c)
+    target_link_libraries(sendcplx simgrid f2c)
+    target_link_libraries(sendfort simgrid f2c)
+#    target_link_libraries(structf simgrid f2c)
+    target_link_libraries(typebasef simgrid f2c)
   endif()
 
   set_target_properties(overtake PROPERTIES COMPILE_FLAGS "${MPICH_FLAGS}")
